--- a/config/database.yml
+++ b/config/database.yml
@@ -15,8 +15,8 @@ development:
   database: offerus_development
   pool: 5
   username: root
-  password:
-  socket: /var/run/mysqld/mysqld.sock
+  password: 
+  #socket: /var/run/mysqld/mysqld.sock
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
@@ -28,8 +28,8 @@ test:
   database: offerus_test
   pool: 5
   username: root
-  password:
-  socket: /var/run/mysqld/mysqld.sock
+  password: 
+  #socket: /var/run/mysqld/mysqld.sock
 
 production:
   adapter: mysql2
